--- a/index.html
+++ b/index.html
@@ -9,47 +9,68 @@
 </head>
 <body>
   <nav>
-    <ul>
-      <li><a href="">email logo</a></li>
-      <li><a href="https://www.linkedin.com/in/suzanne-trammel/">linkedin logo</a></li>
-      <li><a href="https://github.com/strammel33">github logo</a></li>
+    <ul class="icon-links">
+      <li>
+        <a href="https://www.linkedin.com/in/suzanne-trammel/">
+          <img 
+            class="icon"
+            src="./assets/linkedin.png" 
+            alt="the linkedin logo"
+          >
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/strammel33">
+          <img 
+            class="icon"
+            src="./assets/github.png" 
+            alt="the github logo"
+          >
+        </a>
+      </li>
+    </ul>
+    <ul class="page-links">
       <li>Home</li>
       <li>About</li>
       <li>Projects</li>
       <li>Contact</li>
     </ul>
-  <nav>
+  </nav>
   <main>
     <section class="header">
       <h1>Suzanne Trammel</h1>
-      <h3><em>Software Enginner</em></h3>
+      <h3><em>Software Engineer</em></h3>
     </section>
     <section class="about">
       <h2>About Me</h2>
-      <div class="image">
-        <h2>picture of suzannes cute face</h2>
-      </div>
       <div class="content">
-        <p>Hi my name is Suzanne and I am building a portfolio webiste. IDk why people need to use lorem ipsum when my brain is full of words that like to be typed out. For instance: pig pen is a good word. Phrase? Anyway. This is the section where I will write some stuff about myself and how I like to code and also have a cool personality and would love to work with other cool people doing cool things. It will go with a picture of me so that people know who I am and can say "wow ok I get it".</p>
+        <div class="image">
+        <h2>picture of suzannes cute face</h2>
+        </div>
+        <div class="description">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam maxime sapiente repudiandae, a ea necessitatibus harum est quaerat beatae fugit reiciendis qui consequatur animi inventore quas porro, optio rerum possimus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates laboriosam laborum voluptatem sed nam. Fugiat, aliquam. Quo veniam iure reprehenderit dolores modi voluptatum quos aspernatur explicabo odit magni? Est, expedita.</p>
+        </div>
       </div>
     </section>
     <section class="projects">
       <h2>My Projects</h2>
-      <div class="project-container">
-        <img src="" alt="">
-        <h3>Life List</h3>
-      </div>
-      <div class="project-container">
-        <img src="" alt="">
-        <h3>appliCANt</h3>
-      </div>
-      <div class="project-container">
-        <img src="" alt="">
-        <h3>Wild Wordle</h3>
-      </div>
-      <div class="project-container">
-        <img src="" alt="">
-        <h3>Plant Partner</h3>
+      <div class="content">
+        <div class="project-container">
+          <img src="" alt="">
+          <h3>Life List</h3>
+        </div>
+        <div class="project-container">
+          <img src="" alt="">
+          <h3>appliCANt</h3>
+        </div>
+        <div class="project-container">
+          <img src="" alt="">
+          <h3>Wild Wordle</h3>
+        </div>
+        <div class="project-container">
+          <img src="" alt="">
+          <h3>Plant Partner</h3>
+        </div>
       </div>
     </section>
     <section class="contact">
