font and background image change

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,600;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <script defer src="./js/app.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,10 +33,10 @@
       </li>
     </ul>
     <ul class="page-links">
-      <li>Home</li>
-      <li>About</li>
-      <li>Projects</li>
-      <li>Contact</li>
+      <li>HOME</li>
+      <li>ABOUT</li>
+      <li>PROJECTS</li>
+      <li>CONTACT</li>
     </ul>
   </nav>
   <main>
