add photo of me

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h2>About Me</h2>
       <div class="content">
         <div class="image">
-        <h2>picture of suzannes cute face</h2>
+          <img src="./assets/me.jpeg" alt="A photo of Suzanne">
         </div>
         <div class="description">
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam maxime sapiente repudiandae, a ea necessitatibus harum est quaerat beatae fugit reiciendis qui consequatur animi inventore quas porro, optio rerum possimus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates laboriosam laborum voluptatem sed nam. Fugiat, aliquam. Quo veniam iure reprehenderit dolores modi voluptatum quos aspernatur explicabo odit magni? Est, expedita.</p>
