font changes, spacing, content changes

--- a/index.html
+++ b/index.html
@@ -42,37 +42,35 @@
   <main>
     <section class="header">
       <h1>Suzanne Trammel</h1>
-      <h3><em>Software Engineer</em></h3>
+      <h3>Software Engineer</h3>
     </section>
     <section class="about">
-      <h2>About Me</h2>
-      <div class="content">
         <div class="image">
           <img src="./assets/me.jpeg" alt="A photo of Suzanne">
         </div>
         <div class="description">
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam maxime sapiente repudiandae, a ea necessitatibus harum est quaerat beatae fugit reiciendis qui consequatur animi inventore quas porro, optio rerum possimus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates laboriosam laborum voluptatem sed nam. Fugiat, aliquam. Quo veniam iure reprehenderit dolores modi voluptatum quos aspernatur explicabo odit magni? Est, expedita.</p>
+          <h3>Hi! I'm Suzanne Trammel, a veterinary technician turned full stack developer.</h3>
+          <p>I am a versatile problem-solver with a passion for creating innovative solutions. With a wildlife biology and veterinary medicine background, I bring a unique perspective to software engineering. My background in the natural sciences has honed my analytical and critical thinking skills, which I now apply to software development. I am excited to use my diverse skill set to develop sustainable and impactful solutions that positively impact both people and the planet.</p>
         </div>
-      </div>
     </section>
     <section class="projects">
       <h2>My Projects</h2>
-      <div class="content">
+      <div class="project-tiles">
         <div class="project-container">
-          <img src="" alt="">
-          <h3>Life List</h3>
+          <img src="./assets/lifelist.png" alt="a picture of the Life List homepage">
+          <h4>Life List</h4>
         </div>
         <div class="project-container">
-          <img src="" alt="">
-          <h3>appliCANt</h3>
+          <img src="./assets/applicant.png" alt="a picture of the appliCANt homepage">
+          <h4>appliCANt</h4>
         </div>
         <div class="project-container">
-          <img src="" alt="">
-          <h3>Wild Wordle</h3>
+          <img src="./assets/wildwordle.png" alt="a picture of the Wild Wordle homepage">
+          <h4>Wild Wordle</h4>
         </div>
         <div class="project-container">
-          <img src="" alt="">
-          <h3>Plant Partner</h3>
+          <img src="./assets/plantpartner.png" alt="a picture of the Plant Partner homepage">
+          <h4>Plant Partner</h4>
         </div>
       </div>
     </section>
