stub basic layout and styling of project containers

--- a/index.html
+++ b/index.html
@@ -58,19 +58,59 @@
       <div class="project-tiles">
         <div class="project-container">
           <img src="./assets/lifelist.png" alt="a picture of the Life List homepage">
-          <h4>Life List</h4>
+          <a href="https://life-list.fly.dev/">
+            <h4>Life List</h4>
+          </a>
+          <p> Life List is a MEN stack app that utilizes Google OAuth. Life List is for users to log birding events and to keep track of their life list.</p>
+          <a href="https://github.com/strammel33/life-list" class="git-link">
+            <img 
+              class="icon"
+              src="./assets/github.png" 
+              alt="the github logo"
+            >
+          </a>
         </div>
         <div class="project-container">
           <img src="./assets/applicant.png" alt="a picture of the appliCANt homepage">
-          <h4>appliCANt</h4>
+          <a href="https://job-applicant.netlify.app/">
+            <h4>appliCANt</h4>
+          </a>
+          <p>appliCANt is a MERN stack app that utilizes JWT auth. appliCANt is a tool for users to stay organized while on the job hunt. appliCANt was built with two other developers.</p>
+          <a href="https://github.com/callumnelson/applicant-front-end" class="git-link">
+            <img 
+              class="icon"
+              src="./assets/github.png" 
+              alt="the github logo"
+            >
+          </a>
         </div>
         <div class="project-container">
           <img src="./assets/wildwordle.png" alt="a picture of the Wild Wordle homepage">
-          <h4>Wild Wordle</h4>
+          <a href="https://wild-wordle.netlify.app/">
+            <h4>Wild Wordle</h4>
+          </a>
+          <p>Wild Wordle is an animal-themed Wordle clone with two levels of difficulty.</p>
+          <a href="https://github.com/strammel33/animal-wordle" class="git-link">
+            <img 
+              class="icon"
+              src="./assets/github.png" 
+              alt="the github logo"
+            >
+          </a>
         </div>
         <div class="project-container">
           <img src="./assets/plantpartner.png" alt="a picture of the Plant Partner homepage">
-          <h4>Plant Partner</h4>
+          <a href="https://plantpartner.fly.dev/">
+            <h4>Plant Partner</h4>
+          </a>
+          <p>Plant Partner is a Python/Django app to help users keep track of when they last took care of their house plants.</p>
+          <a href="https://github.com/strammel33/plant-partner" class="git-link">
+            <img 
+              class="icon"
+              src="./assets/github.png" 
+              alt="the github logo"
+            >
+          </a>
         </div>
       </div>
     </section>
