--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
       </li>
     </ul>
     <ul class="page-links">
-      <li>HOME</li>
-      <li>ABOUT</li>
-      <li>PROJECTS</li>
-      <li>CONTACT</li>
+      <li><a href="#home">HOME</a></li>
+      <li><a href="#about">ABOUT</a></li>
+      <li><a href="#projects">PROJECTS</a></li>
+      <li><a href="#contact">CONTACT</a></li>
     </ul>
   </nav>
   <main>
-    <section class="header">
+    <section class="header" id="home">
       <h1>Suzanne Trammel</h1>
       <h3>Software Engineer</h3>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div class="image">
           <img src="./assets/me.jpeg" alt="A photo of Suzanne">
         </div>
@@ -53,7 +53,7 @@
           <p>I am a versatile problem-solver with a passion for creating innovative solutions. With a wildlife biology and veterinary medicine background, I bring a unique perspective to software engineering. My background in the natural sciences has honed my analytical and critical thinking skills, which I now apply to software development. I am excited to use my diverse skill set to develop sustainable and impactful solutions that positively impact both people and the planet.</p>
         </div>
     </section>
-    <section class="projects">
+    <section class="projects" id="projects">
       <h2>My Projects</h2>
       <div class="project-tiles">
         <div class="project-container">
@@ -114,7 +114,7 @@
         </div>
       </div>
     </section>
-    <section class="contact">
+    <section class="contact" id="contact">
       <h2>Contact Me</h2>
       <form action="https://formsubmit.co/4b815ede1820a8cbdedfe0a48b7d5d2d" method="POST">
         <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
@@ -123,6 +123,29 @@
         <textarea name="message" placeholder="Message" autocomplete="off" required></textarea>
         <button type="submit">Send</button>
       </form>
+    </section>
+    <section class="footer">
+      <a href="">
+        <img 
+          class="icon"
+          src="./assets/email.png" 
+          alt="an email icon"
+        >
+      </a>
+      <a href="https://www.linkedin.com/in/suzanne-trammel/">
+        <img 
+          class="icon"
+          src="./assets/linkedin.png" 
+          alt="the linkedin logo"
+        >
+      </a>
+      <a href="https://github.com/strammel33">
+        <img 
+          class="icon"
+          src="./assets/github.png" 
+          alt="the github logo"
+        >
+      </a>
     </section>
   </main>
 </body>
