--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <nav>
-    <ul class="icon-links">
+    <ul >
       <li>
         <a href="https://www.linkedin.com/in/suzanne-trammel/">
           <img 
@@ -123,29 +123,29 @@
         <textarea name="message" placeholder="Message" autocomplete="off" required></textarea>
         <button type="submit">Send</button>
       </form>
-    </section>
-    <section class="footer">
-      <a href="">
-        <img 
-          class="icon"
-          src="./assets/email.png" 
-          alt="an email icon"
-        >
-      </a>
-      <a href="https://www.linkedin.com/in/suzanne-trammel/">
-        <img 
-          class="icon"
-          src="./assets/linkedin.png" 
-          alt="the linkedin logo"
-        >
-      </a>
-      <a href="https://github.com/strammel33">
-        <img 
-          class="icon"
-          src="./assets/github.png" 
-          alt="the github logo"
-        >
-      </a>
+      <div class="icon-links">
+        <a href="mailto:trammelsuzanne@gmail.com">
+          <img 
+            class="icon"
+            src="./assets/email.png" 
+            alt="an email icon"
+          >
+        </a>
+        <a href="https://www.linkedin.com/in/suzanne-trammel/">
+          <img 
+            class="icon"
+            src="./assets/linkedin.png" 
+            alt="the linkedin logo"
+          >
+        </a>
+        <a href="https://github.com/strammel33">
+          <img 
+            class="icon"
+            src="./assets/github.png" 
+            alt="the github logo"
+          >
+        </a>
+      </div>
     </section>
   </main>
 </body>
