adjust sizing for scalability

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             class="icon"
             src="./assets/linkedin.png" 
             alt="the linkedin logo"
+            target="_blank"
           >
         </a>
       </li>
@@ -28,6 +29,7 @@
             class="icon"
             src="./assets/github.png" 
             alt="the github logo"
+            target="_blank"
           >
         </a>
       </li>
@@ -58,11 +60,11 @@
       <div class="project-tiles">
         <div class="project-container">
           <img src="./assets/lifelist.png" alt="a picture of the Life List homepage">
-          <a href="https://life-list.fly.dev/">
+          <a href="https://life-list.fly.dev/" target="_blank">
             <h4>Life List</h4>
           </a>
           <p> Life List is a MEN stack app that utilizes Google OAuth. Life List is for users to log birding events and to keep track of their life list.</p>
-          <a href="https://github.com/strammel33/life-list" class="git-link">
+          <a href="https://github.com/strammel33/life-list" class="git-link" target="_blank">
             <img 
               class="icon"
               src="./assets/github.png" 
@@ -72,11 +74,11 @@
         </div>
         <div class="project-container">
           <img src="./assets/applicant.png" alt="a picture of the appliCANt homepage">
-          <a href="https://job-applicant.netlify.app/">
+          <a href="https://job-applicant.netlify.app/" target="_blank">
             <h4>appliCANt</h4>
           </a>
           <p>appliCANt is a MERN stack app that utilizes JWT auth. appliCANt is a tool for users to stay organized while on the job hunt. appliCANt was built with two other developers.</p>
-          <a href="https://github.com/callumnelson/applicant-front-end" class="git-link">
+          <a href="https://github.com/callumnelson/applicant-front-end" class="git-link" target="_blank">
             <img 
               class="icon"
               src="./assets/github.png" 
@@ -86,11 +88,11 @@
         </div>
         <div class="project-container">
           <img src="./assets/wildwordle.png" alt="a picture of the Wild Wordle homepage">
-          <a href="https://wild-wordle.netlify.app/">
+          <a href="https://wild-wordle.netlify.app/" target="_blank">
             <h4>Wild Wordle</h4>
           </a>
           <p>Wild Wordle is an animal-themed Wordle clone with two levels of difficulty.</p>
-          <a href="https://github.com/strammel33/animal-wordle" class="git-link">
+          <a href="https://github.com/strammel33/animal-wordle" class="git-link" target="_blank">
             <img 
               class="icon"
               src="./assets/github.png" 
@@ -100,11 +102,11 @@
         </div>
         <div class="project-container">
           <img src="./assets/plantpartner.png" alt="a picture of the Plant Partner homepage">
-          <a href="https://plantpartner.fly.dev/">
+          <a href="https://plantpartner.fly.dev/" target="_blank">
             <h4>Plant Partner</h4>
           </a>
           <p>Plant Partner is a Python/Django app to help users keep track of when they last took care of their house plants.</p>
-          <a href="https://github.com/strammel33/plant-partner" class="git-link">
+          <a href="https://github.com/strammel33/plant-partner" class="git-link" target="_blank">
             <img 
               class="icon"
               src="./assets/github.png" 
@@ -131,14 +133,14 @@
             alt="an email icon"
           >
         </a>
-        <a href="https://www.linkedin.com/in/suzanne-trammel/">
+        <a href="https://www.linkedin.com/in/suzanne-trammel/" target="_blank">
           <img 
             class="icon"
             src="./assets/linkedin.png" 
             alt="the linkedin logo"
           >
         </a>
-        <a href="https://github.com/strammel33">
+        <a href="https://github.com/strammel33" target="_blank">
           <img 
             class="icon"
             src="./assets/github.png" 
