changes to sizes for deployment

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <a href="https://job-applicant.netlify.app/" target="_blank">
             <h4>appliCANt</h4>
           </a>
-          <p>appliCANt is a MERN stack app that utilizes JWT auth. appliCANt is a tool for users to stay organized while on the job hunt. appliCANt was built with two other developers.</p>
+          <p>appliCANt is a group project MERN stack app that utilizes JWT auth. appliCANt is a tool for users to stay organized while on the job hunt. </p>
           <a href="https://github.com/callumnelson/applicant-front-end" class="git-link" target="_blank">
             <img 
               class="icon"
