restructure assets file and add some icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,600;1,400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <script defer src="./js/app.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,8 +18,8 @@
       <li>
         <a href="https://www.linkedin.com/in/suzanne-trammel/">
           <img 
-            class="icon"
-            src="./assets/linkedin.png" 
+            class="icon-link"
+            src="./assets/icons/linkedin.png" 
             alt="the linkedin logo"
             target="_blank"
           >
@@ -27,8 +28,8 @@
       <li>
         <a href="https://github.com/strammel33">
           <img 
-            class="icon"
-            src="./assets/github.png" 
+            class="icon-link"
+            src="./assets/icons/github.png" 
             alt="the github logo"
             target="_blank"
           >
@@ -49,9 +50,9 @@
     </section>
     <section class="about" id="about">
         <div class="image">
-          <img src="./assets/me.jpeg" alt="A photo of Suzanne">
+          <img src="./assets/images/me.jpeg" alt="A photo of Suzanne">
         </div>
-        <div class="description">
+        <div class="about-me">
           <h3>Hi! I'm Suzanne Trammel, a veterinary technician turned full stack developer.</h3>
           <p>I am a versatile problem-solver with a passion for creating innovative solutions. With a wildlife biology and veterinary medicine background, I bring a unique perspective to software engineering. My background in the natural sciences has honed my analytical and critical thinking skills, which I now apply to software development. I am excited to use my diverse skill set to develop sustainable and impactful solutions that positively impact both people and the planet.</p>
         </div>
@@ -60,57 +61,80 @@
       <h2>My Projects</h2>
       <div class="project-tiles">
         <div class="project-container">
-          <img src="./assets/lifelist.png" alt="a picture of the Life List homepage">
+          <img src="./assets/images/lifelist.png" alt="a picture of the Life List homepage">
+          <div class="description">
+            <h3>Technologies:</h3>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-plain-wordmark.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="icon"/>
+          </div>
           <a href="https://life-list.fly.dev/" target="_blank">
             <h4>Life List</h4>
           </a>
           <p> Life List is a MEN stack app that utilizes Google OAuth. Life List is for users to log birding events and to keep track of their life list.</p>
           <a href="https://github.com/strammel33/life-list" class="git-link" target="_blank">
             <img 
-              class="icon"
-              src="./assets/github.png" 
+              class="icon-link"
+              src="./assets/icons/github.png" 
               alt="the github logo"
             >
           </a>
         </div>
         <div class="project-container">
-          <img src="./assets/applicant.png" alt="a picture of the appliCANt homepage">
+          <img src="./assets/images/applicant.png" alt="a picture of the appliCANt homepage">
+          <div class="description">
+            <h3>Technologies:</h3>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="icon"/>
+          </div>
           <a href="https://job-applicant.netlify.app/" target="_blank">
             <h4>appliCANt</h4>
           </a>
           <p>appliCANt is a group project MERN stack app that utilizes JWT auth. appliCANt is a tool for users to stay organized while on the job hunt. </p>
           <a href="https://github.com/callumnelson/applicant-front-end" class="git-link" target="_blank">
             <img 
-              class="icon"
-              src="./assets/github.png" 
+              class="icon-link"
+              src="./assets/icons/github.png" 
               alt="the github logo"
             >
           </a>
         </div>
         <div class="project-container">
-          <img src="./assets/wildwordle.png" alt="a picture of the Wild Wordle homepage">
+          <img src="./assets/images/wildwordle.png" alt="a picture of the Wild Wordle homepage">
+          <div class="description">
+            <h3>Technologies:</h3>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="icon"/>
+          </div>
           <a href="https://wild-wordle.netlify.app/" target="_blank">
             <h4>Wild Wordle</h4>
           </a>
           <p>Wild Wordle is an animal-themed Wordle clone with two levels of difficulty.</p>
           <a href="https://github.com/strammel33/animal-wordle" class="git-link" target="_blank">
             <img 
-              class="icon"
-              src="./assets/github.png" 
+              class="icon-link"
+              src="./assets/icons/github.png" 
               alt="the github logo"
             >
           </a>
         </div>
         <div class="project-container">
-          <img src="./assets/plantpartner.png" alt="a picture of the Plant Partner homepage">
+          <img src="./assets/images/plantpartner.png" alt="a picture of the Plant Partner homepage">
+          <div class="description">
+            <h3>Technologies:</h3>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="icon"/>
+          </div>
           <a href="https://plantpartner.fly.dev/" target="_blank">
             <h4>Plant Partner</h4>
           </a>
           <p>Plant Partner is a Python/Django app to help users keep track of when they last took care of their house plants.</p>
           <a href="https://github.com/strammel33/plant-partner" class="git-link" target="_blank">
             <img 
-              class="icon"
-              src="./assets/github.png" 
+              class="icon-link"
+              src="./assets/icons/github.png" 
               alt="the github logo"
             >
           </a>
@@ -129,22 +153,22 @@
       <div class="icon-links">
         <a href="mailto:trammelsuzanne@gmail.com">
           <img 
-            class="icon"
-            src="./assets/email.png" 
+            class="icon-link"
+            src="./assets/icons/email.png" 
             alt="an email icon"
           >
         </a>
         <a href="https://www.linkedin.com/in/suzanne-trammel/" target="_blank">
           <img 
-            class="icon"
-            src="./assets/linkedin.png" 
+            class="icon-link"
+            src="./assets/icons/linkedin.png" 
             alt="the linkedin logo"
           >
         </a>
         <a href="https://github.com/strammel33" target="_blank">
           <img 
-            class="icon"
-            src="./assets/github.png" 
+            class="icon-link"
+            src="./assets/icons/github.png" 
             alt="the github logo"
           >
         </a>
