--- a/index.html
+++ b/index.html
@@ -61,13 +61,20 @@
       <h2>My Projects</h2>
       <div class="project-tiles">
         <div class="project-container">
-          <img src="./assets/images/lifelist.png" alt="a picture of the Life List homepage">
-          <div class="description">
-            <h3>Technologies:</h3>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-plain-wordmark.svg" class="icon"/>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="icon"/>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="icon"/>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="icon"/>
+          <div class="overlay-container">
+            <img src="./assets/images/lifelist.png" alt="a picture of the Life List homepage">
+            <div class="stack">
+              <h3>Technologies:</h3>
+              <div class="icons">
+                <img src="./assets/icons/mongoose.png" alt="the mongoose icon" >
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-plain-wordmark.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg"  style="background-color:white"/>
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+              </div>
+            </div>
           </div>
           <a href="https://life-list.fly.dev/" target="_blank">
             <h4>Life List</h4>
@@ -82,12 +89,23 @@
           </a>
         </div>
         <div class="project-container">
-          <img src="./assets/images/applicant.png" alt="a picture of the appliCANt homepage">
-          <div class="description">
-            <h3>Technologies:</h3>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="icon"/>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="icon"/>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="icon"/>
+          <div class="overlay-container">
+            <img src="./assets/images/applicant.png" alt="a picture of the appliCANt homepage">
+            <div class="stack">
+              <h3>Technologies:</h3>
+              <div class="icons">
+                <img src="./assets/icons/mongoose.png" alt="the mongoose icon" >
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-plain-wordmark.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg"  style="background-color:white"/>
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" />
+                <img src="./assets/icons/vite.png" alt="the vite icon">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
+                <img src="./assets/icons/mui.png" alt="the mui icon">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+              </div>
+            </div>
           </div>
           <a href="https://job-applicant.netlify.app/" target="_blank">
             <h4>appliCANt</h4>
@@ -102,12 +120,16 @@
           </a>
         </div>
         <div class="project-container">
-          <img src="./assets/images/wildwordle.png" alt="a picture of the Wild Wordle homepage">
-          <div class="description">
-            <h3>Technologies:</h3>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="icon"/>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="icon"/>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="icon"/>
+          <div class="overlay-container">
+            <img src="./assets/images/wildwordle.png" alt="a picture of the Wild Wordle homepage">
+            <div class="stack">
+              <h3>Technologies:</h3>
+              <div class="icons">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+              </div>
+            </div>
           </div>
           <a href="https://wild-wordle.netlify.app/" target="_blank">
             <h4>Wild Wordle</h4>
@@ -122,10 +144,19 @@
           </a>
         </div>
         <div class="project-container">
-          <img src="./assets/images/plantpartner.png" alt="a picture of the Plant Partner homepage">
-          <div class="description">
-            <h3>Technologies:</h3>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="icon"/>
+          <div class="overlay-container">
+            <img src="./assets/images/plantpartner.png" alt="a picture of the Plant Partner homepage">
+            <div class="stack">
+              <h3>Technologies:</h3>
+              <div class="icons">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-plain.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-plain-wordmark.svg" />
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+              </div>
+            </div>
           </div>
           <a href="https://plantpartner.fly.dev/" target="_blank">
             <h4>Plant Partner</h4>
