show tech stack on hover

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="project-tiles">
         <div class="project-container">
           <div class="overlay-container">
-            <img src="./assets/images/lifelist.png" alt="a picture of the Life List homepage">
+            <img src="./assets/images/lifelist.png" alt="a picture of the Life List homepage" class="project-img">
             <div class="stack">
               <h3>Technologies:</h3>
               <div class="icons">
@@ -90,7 +90,7 @@
         </div>
         <div class="project-container">
           <div class="overlay-container">
-            <img src="./assets/images/applicant.png" alt="a picture of the appliCANt homepage">
+            <img src="./assets/images/applicant.png" alt="a picture of the appliCANt homepage" class="project-img">
             <div class="stack">
               <h3>Technologies:</h3>
               <div class="icons">
@@ -121,7 +121,7 @@
         </div>
         <div class="project-container">
           <div class="overlay-container">
-            <img src="./assets/images/wildwordle.png" alt="a picture of the Wild Wordle homepage">
+            <img src="./assets/images/wildwordle.png" alt="a picture of the Wild Wordle homepage" class="project-img">
             <div class="stack">
               <h3>Technologies:</h3>
               <div class="icons">
@@ -145,7 +145,7 @@
         </div>
         <div class="project-container">
           <div class="overlay-container">
-            <img src="./assets/images/plantpartner.png" alt="a picture of the Plant Partner homepage">
+            <img src="./assets/images/plantpartner.png" alt="a picture of the Plant Partner homepage" class="project-img">
             <div class="stack">
               <h3>Technologies:</h3>
               <div class="icons">
