--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
           <div class="overlay-container">
             <img src="./assets/images/lifelist.png" alt="a picture of the Life List homepage" class="project-img">
             <div class="stack">
-              <h3>Technologies:</h3>
               <div class="icons">
                 <img src="./assets/icons/mongoose.png" alt="the mongoose icon" >
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-plain-wordmark.svg" />
@@ -92,7 +91,6 @@
           <div class="overlay-container">
             <img src="./assets/images/applicant.png" alt="a picture of the appliCANt homepage" class="project-img">
             <div class="stack">
-              <h3>Technologies:</h3>
               <div class="icons">
                 <img src="./assets/icons/mongoose.png" alt="the mongoose icon" >
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-plain-wordmark.svg" />
@@ -123,7 +121,6 @@
           <div class="overlay-container">
             <img src="./assets/images/wildwordle.png" alt="a picture of the Wild Wordle homepage" class="project-img">
             <div class="stack">
-              <h3>Technologies:</h3>
               <div class="icons">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
@@ -147,10 +144,9 @@
           <div class="overlay-container">
             <img src="./assets/images/plantpartner.png" alt="a picture of the Plant Partner homepage" class="project-img">
             <div class="stack">
-              <h3>Technologies:</h3>
               <div class="icons">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" />
+                <i class="devicon-django-plain"></i>
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-plain.svg" />
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" />
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-plain-wordmark.svg" />
