update form submit string

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="about-me">
           <h3>Hi! I'm Suzanne Trammel, a veterinary technician turned full stack developer.</h3>
-          <p>I am a versatile problem-solver with a passion for creating innovative solutions. With a wildlife biology and veterinary medicine background, I bring a unique perspective to software engineering. My background in the natural sciences has honed my analytical and critical thinking skills, which I now apply to software development. I am excited to use my diverse skill set to develop sustainable and impactful solutions that positively impact both people and the planet.</p>
+          <p>I am a versatile problem-solver with a passion for creating innovative solutions. With a wildlife biology and veterinary medicine background, I bring a unique perspective to software engineering. My background in the natural sciences has honed my analytical and critical thinking skills, which I now apply to software development. I am thrilled to utilize my diverse skill set to develop sustainable solutions that have a positive and lasting effect on both people and the planet.</p>
         </div>
     </section>
     <section class="projects" id="projects">
