change redirect url after submitting form

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <section class="contact" id="contact">
       <h2>Contact Me</h2>
       <form action="https://formsubmit.co/4b815ede1820a8cbdedfe0a48b7d5d2d" method="POST">
-        <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+        <input type="hidden" name="_next" value="https://suzanne-trammel-portfolio.netlify.app/">
         <input type="text" name="name" placeholder="Name" autocomplete="off" required>
         <input type="email" name="email" placeholder="Email" autocomplete="off" required>
         <textarea name="message" placeholder="Message" autocomplete="off" required></textarea>
