--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,600;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <script defer src="./js/app.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Suzanne Trammel's Portfolio</title>
 </head>
 <body>
-  <nav>
-    <ul >
-      <li>
+  <nav class="topnav">
+    <div class="active">
         <a href="https://www.linkedin.com/in/suzanne-trammel/">
           <img 
             class="icon-link"
@@ -24,8 +24,6 @@
             target="_blank"
           >
         </a>
-      </li>
-      <li>
         <a href="https://github.com/strammel33">
           <img 
             class="icon-link"
@@ -34,14 +32,16 @@
             target="_blank"
           >
         </a>
-      </li>
-    </ul>
-    <ul class="page-links">
-      <li><a href="#home">HOME</a></li>
-      <li><a href="#about">ABOUT</a></li>
-      <li><a href="#projects">PROJECTS</a></li>
-      <li><a href="#contact">CONTACT</a></li>
-    </ul>
+    </div>
+    <div id="page-links">
+      <a href="#home">HOME</a>
+      <a href="#about">ABOUT</a>
+      <a href="#projects">PROJECTS</a>
+      <a href="#contact">CONTACT</a>
+    </div>
+    <a href="javascript:void(0);" class="icon" onClick="toggleNav()">
+      <i class="fa fa-bars"></i>
+    </a>
   </nav>
   <main>
     <section class="header" id="home">
@@ -53,7 +53,7 @@
           <img src="./assets/images/me.jpeg" alt="A photo of Suzanne">
         </div>
         <div class="about-me">
-          <h3>Hi! I'm Suzanne Trammel, a veterinary technician turned full stack developer.</h3>
+          <h3>Hi! I'm Suzanne Trammel.</h3>
           <p>I am a versatile problem-solver with a passion for creating innovative solutions. With a wildlife biology and veterinary medicine background, I bring a unique perspective to software engineering. My background in the natural sciences has honed my analytical and critical thinking skills, which I now apply to software development. I am thrilled to utilize my diverse skill set to develop sustainable solutions that have a positive and lasting effect on both people and the planet.</p>
         </div>
     </section>
