undo hamburger nav

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,600;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <script defer src="./js/app.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Suzanne Trammel's Portfolio</title>
 </head>
 <body>
-  <nav class="topnav">
-    <div class="active">
-        <a href="https://www.linkedin.com/in/suzanne-trammel/">
+  <nav>
+    <ul>
+      <li>
+                <a href="https://www.linkedin.com/in/suzanne-trammel/">
           <img 
             class="icon-link"
             src="./assets/icons/linkedin.png" 
@@ -24,7 +24,9 @@
             target="_blank"
           >
         </a>
-        <a href="https://github.com/strammel33">
+      </li>
+      <li>
+                <a href="https://github.com/strammel33">
           <img 
             class="icon-link"
             src="./assets/icons/github.png" 
@@ -32,16 +34,14 @@
             target="_blank"
           >
         </a>
-    </div>
-    <div id="page-links">
-      <a href="#home">HOME</a>
-      <a href="#about">ABOUT</a>
-      <a href="#projects">PROJECTS</a>
-      <a href="#contact">CONTACT</a>
-    </div>
-    <a href="javascript:void(0);" class="icon" onClick="toggleNav()">
-      <i class="fa fa-bars"></i>
-    </a>
+      </li>
+    </ul>
+    <ul class="page-links">
+      <li><a href="#home">HOME</a></li>
+      <li><a href="#about">ABOUT</a></li>
+      <li><a href="#projects">PROJECTS</a></li>
+      <li><a href="#contact">CONTACT</a></li>
+    </ul>
   </nav>
   <main>
     <section class="header" id="home">
