--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <h2>My Projects</h2>
       <div class="project-tiles">
         <div class="project-container">
+          <h3>Life List</h3>
           <div class="overlay-container">
             <img src="./assets/images/lifelist.png" alt="a picture of the Life List homepage" class="project-img">
             <div class="stack">
@@ -75,10 +76,11 @@
               </div>
             </div>
           </div>
+          <p>Try it here:</p>
           <a href="https://life-list.fly.dev/" target="_blank">
             <h4>Life List</h4>
           </a>
-          <p> Life List is a MEN stack app that utilizes Google OAuth. Life List is for users to log birding events and to keep track of their life list.</p>
+          <p> Life List is a desktop MEN stack app that utilizes Google OAuth. Life List is for users to log birding events and to keep track of their life list.</p>
           <a href="https://github.com/strammel33/life-list" class="git-link" target="_blank">
             <img 
               class="icon-link"
@@ -88,6 +90,7 @@
           </a>
         </div>
         <div class="project-container">
+          <h3>appliCANt</h3>
           <div class="overlay-container">
             <img src="./assets/images/applicant.png" alt="a picture of the appliCANt homepage" class="project-img">
             <div class="stack">
@@ -105,6 +108,7 @@
               </div>
             </div>
           </div>
+          <p>Try it here:</p>
           <a href="https://job-applicant.netlify.app/" target="_blank">
             <h4>appliCANt</h4>
           </a>
@@ -118,6 +122,7 @@
           </a>
         </div>
         <div class="project-container">
+          <h3>Wild Wordle</h3>
           <div class="overlay-container">
             <img src="./assets/images/wildwordle.png" alt="a picture of the Wild Wordle homepage" class="project-img">
             <div class="stack">
@@ -128,10 +133,11 @@
               </div>
             </div>
           </div>
+          <p>Try it here:</p>
           <a href="https://wild-wordle.netlify.app/" target="_blank">
             <h4>Wild Wordle</h4>
           </a>
-          <p>Wild Wordle is an animal-themed Wordle clone with two levels of difficulty.</p>
+          <p>Wild Wordle is a mobile-friendly, animal-themed Wordle clone with two levels of difficulty.</p>
           <a href="https://github.com/strammel33/animal-wordle" class="git-link" target="_blank">
             <img 
               class="icon-link"
@@ -141,6 +147,7 @@
           </a>
         </div>
         <div class="project-container">
+          <h3>Plant Partner</h3>
           <div class="overlay-container">
             <img src="./assets/images/plantpartner.png" alt="a picture of the Plant Partner homepage" class="project-img">
             <div class="stack">
@@ -154,10 +161,11 @@
               </div>
             </div>
           </div>
+          <p>Try it here:</p>
           <a href="https://plantpartner.fly.dev/" target="_blank">
             <h4>Plant Partner</h4>
           </a>
-          <p>Plant Partner is a Python/Django app to help users keep track of when they last took care of their house plants.</p>
+          <p>Plant Partner is a responsive Python/Django app to help users keep track of when they last took care of their house plants.</p>
           <a href="https://github.com/strammel33/plant-partner" class="git-link" target="_blank">
             <img 
               class="icon-link"
