restructure project containers to make links to sites more obvious

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
     <ul>
       <li>
-                <a href="https://www.linkedin.com/in/suzanne-trammel/">
+          <a href="https://www.linkedin.com/in/suzanne-trammel/">
           <img 
             class="icon-link"
             src="./assets/icons/linkedin.png" 
@@ -76,18 +76,23 @@
               </div>
             </div>
           </div>
-          <p>Try it here:</p>
-          <a href="https://life-list.fly.dev/" target="_blank">
-            <h4>Life List</h4>
-          </a>
           <p> Life List is a desktop MEN stack app that utilizes Google OAuth. Life List is for users to log birding events and to keep track of their life list.</p>
-          <a href="https://github.com/strammel33/life-list" class="git-link" target="_blank">
-            <img 
-              class="icon-link"
-              src="./assets/icons/github.png" 
-              alt="the github logo"
-            >
-          </a>
+          <div class="project-links">
+            <a href="https://life-list.fly.dev/" target="_blank">
+              <img 
+                class="icon-link website-icon"
+                src="./assets/icons/myicon.png" 
+                alt="a website icon"
+              >
+            </a>
+            <a href="https://github.com/strammel33/life-list" class="git-link" target="_blank">
+              <img 
+                class="icon-link"
+                src="./assets/icons/github.png" 
+                alt="the github logo"
+              >
+            </a>
+          </div>
         </div>
         <div class="project-container">
           <h3>appliCANt</h3>
@@ -108,18 +113,24 @@
               </div>
             </div>
           </div>
-          <p>Try it here:</p>
-          <a href="https://job-applicant.netlify.app/" target="_blank">
-            <h4>appliCANt</h4>
-          </a>
           <p>appliCANt is a group project MERN stack app that utilizes JWT auth. appliCANt is a tool for users to stay organized while on the job hunt. </p>
-          <a href="https://github.com/callumnelson/applicant-front-end" class="git-link" target="_blank">
-            <img 
-              class="icon-link"
-              src="./assets/icons/github.png" 
-              alt="the github logo"
-            >
-          </a>
+          <div class="project-links">
+            <a href="https://job-applicant.netlify.app/" target="_blank">
+              <img 
+              class="icon-link website-icon"
+              src="./assets/icons/myicon.png" 
+              alt="a website icon"
+              >
+            </a>
+            <a href="https://github.com/callumnelson/applicant-front-end" class="git-link" target="_blank">
+              <img 
+                class="icon-link"
+                src="./assets/icons/github.png" 
+                alt="the github logo"
+              >
+            </a>
+          </div>
+
         </div>
         <div class="project-container">
           <h3>Wild Wordle</h3>
@@ -133,18 +144,23 @@
               </div>
             </div>
           </div>
-          <p>Try it here:</p>
-          <a href="https://wild-wordle.netlify.app/" target="_blank">
-            <h4>Wild Wordle</h4>
-          </a>
           <p>Wild Wordle is a mobile-friendly, animal-themed Wordle clone with two levels of difficulty.</p>
-          <a href="https://github.com/strammel33/animal-wordle" class="git-link" target="_blank">
-            <img 
-              class="icon-link"
-              src="./assets/icons/github.png" 
-              alt="the github logo"
-            >
-          </a>
+          <div class="project-links">
+            <a href="https://wild-wordle.netlify.app/" target="_blank">
+              <img 
+              class="icon-link website-icon"
+              src="./assets/icons/myicon.png" 
+              alt="a website icon"
+              >
+            </a>
+            <a href="https://github.com/strammel33/animal-wordle" class="git-link" target="_blank">
+              <img 
+                class="icon-link"
+                src="./assets/icons/github.png" 
+                alt="the github logo"
+              >
+            </a>
+          </div>
         </div>
         <div class="project-container">
           <h3>Plant Partner</h3>
@@ -161,18 +177,23 @@
               </div>
             </div>
           </div>
-          <p>Try it here:</p>
-          <a href="https://plantpartner.fly.dev/" target="_blank">
-            <h4>Plant Partner</h4>
-          </a>
           <p>Plant Partner is a responsive Python/Django app to help users keep track of when they last took care of their house plants.</p>
-          <a href="https://github.com/strammel33/plant-partner" class="git-link" target="_blank">
-            <img 
-              class="icon-link"
-              src="./assets/icons/github.png" 
-              alt="the github logo"
-            >
-          </a>
+          <div class="project-links">
+            <a href="https://plantpartner.fly.dev/" target="_blank">
+              <img 
+              class="icon-link website-icon"
+              src="./assets/icons/myicon.png" 
+              alt="a website icon"
+              >
+            </a>
+            <a href="https://github.com/strammel33/plant-partner" class="git-link" target="_blank">
+              <img 
+                class="icon-link"
+                src="./assets/icons/github.png" 
+                alt="the github logo"
+              >
+            </a>
+          </div>
         </div>
       </div>
     </section>
