style buttons on site

--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
           <div class="project-links">
             <a href="https://life-list.fly.dev/" target="_blank">
               <img 
-                class="icon-link website-icon"
+                class="website-icon"
                 src="./assets/icons/myicon.png" 
                 alt="a website icon"
               >
             </a>
             <a href="https://github.com/strammel33/life-list" class="git-link" target="_blank">
               <img 
-                class="icon-link"
+                class="website-icon"
                 src="./assets/icons/github.png" 
                 alt="the github logo"
               >
@@ -117,14 +117,14 @@
           <div class="project-links">
             <a href="https://job-applicant.netlify.app/" target="_blank">
               <img 
-              class="icon-link website-icon"
-              src="./assets/icons/myicon.png" 
-              alt="a website icon"
+                class="website-icon"
+                src="./assets/icons/myicon.png" 
+                alt="a website icon"
               >
             </a>
             <a href="https://github.com/callumnelson/applicant-front-end" class="git-link" target="_blank">
               <img 
-                class="icon-link"
+                class="website-icon"
                 src="./assets/icons/github.png" 
                 alt="the github logo"
               >
@@ -148,14 +148,14 @@
           <div class="project-links">
             <a href="https://wild-wordle.netlify.app/" target="_blank">
               <img 
-              class="icon-link website-icon"
-              src="./assets/icons/myicon.png" 
-              alt="a website icon"
+                class="website-icon"
+                src="./assets/icons/myicon.png" 
+                alt="a website icon"
               >
             </a>
             <a href="https://github.com/strammel33/animal-wordle" class="git-link" target="_blank">
               <img 
-                class="icon-link"
+              class="website-icon"
                 src="./assets/icons/github.png" 
                 alt="the github logo"
               >
@@ -181,14 +181,14 @@
           <div class="project-links">
             <a href="https://plantpartner.fly.dev/" target="_blank">
               <img 
-              class="icon-link website-icon"
-              src="./assets/icons/myicon.png" 
-              alt="a website icon"
+                class="website-icon"
+                src="./assets/icons/myicon.png" 
+                alt="a website icon"
               >
             </a>
             <a href="https://github.com/strammel33/plant-partner" class="git-link" target="_blank">
               <img 
-                class="icon-link"
+                class="website-icon"
                 src="./assets/icons/github.png" 
                 alt="the github logo"
               >
