try words instead of icons for nav to project sites

--- a/index.html
+++ b/index.html
@@ -79,18 +79,20 @@
           <p> Life List is a desktop MEN stack app that utilizes Google OAuth. Life List is for users to log birding events and to keep track of their life list.</p>
           <div class="project-links">
             <a href="https://life-list.fly.dev/" target="_blank">
-              <img 
+              <h4>Launch</h4>
+              <!-- <img 
                 class="website-icon"
                 src="./assets/icons/myicon.png" 
                 alt="a website icon"
-              >
+              > -->
             </a>
             <a href="https://github.com/strammel33/life-list" class="git-link" target="_blank">
-              <img 
+              <h4>GitHub</h4>
+              <!-- <img 
                 class="website-icon"
                 src="./assets/icons/github.png" 
                 alt="the github logo"
-              >
+              > -->
             </a>
           </div>
         </div>
