--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <input type="text" name="name" placeholder="Name" autocomplete="off" required>
         <input type="email" name="email" placeholder="Email" autocomplete="off" required>
         <textarea name="message" placeholder="Message" autocomplete="off" required></textarea>
-        <button type="submit">Send</button>
+        <button type="submit">SEND</button>
       </form>
       <div class="icon-links">
         <a href="mailto:trammelsuzanne@gmail.com">
