change all project buttons to words

--- a/index.html
+++ b/index.html
@@ -80,19 +80,9 @@
           <div class="project-links">
             <a href="https://life-list.fly.dev/" target="_blank">
               <h4>Launch</h4>
-              <!-- <img 
-                class="website-icon"
-                src="./assets/icons/myicon.png" 
-                alt="a website icon"
-              > -->
             </a>
             <a href="https://github.com/strammel33/life-list" class="git-link" target="_blank">
               <h4>GitHub</h4>
-              <!-- <img 
-                class="website-icon"
-                src="./assets/icons/github.png" 
-                alt="the github logo"
-              > -->
             </a>
           </div>
         </div>
@@ -118,21 +108,12 @@
           <p>appliCANt is a group project MERN stack app that utilizes JWT auth. appliCANt is a tool for users to stay organized while on the job hunt. </p>
           <div class="project-links">
             <a href="https://job-applicant.netlify.app/" target="_blank">
-              <img 
-                class="website-icon"
-                src="./assets/icons/myicon.png" 
-                alt="a website icon"
-              >
+              <h4>Launch</h4>
             </a>
             <a href="https://github.com/callumnelson/applicant-front-end" class="git-link" target="_blank">
-              <img 
-                class="website-icon"
-                src="./assets/icons/github.png" 
-                alt="the github logo"
-              >
+              <h4>GitHub</h4>
             </a>
           </div>
-
         </div>
         <div class="project-container">
           <h3>Wild Wordle</h3>
@@ -149,18 +130,10 @@
           <p>Wild Wordle is a mobile-friendly, animal-themed Wordle clone with two levels of difficulty.</p>
           <div class="project-links">
             <a href="https://wild-wordle.netlify.app/" target="_blank">
-              <img 
-                class="website-icon"
-                src="./assets/icons/myicon.png" 
-                alt="a website icon"
-              >
+              <h4>Launch</h4>
             </a>
             <a href="https://github.com/strammel33/animal-wordle" class="git-link" target="_blank">
-              <img 
-              class="website-icon"
-                src="./assets/icons/github.png" 
-                alt="the github logo"
-              >
+              <h4>GitHub</h4>
             </a>
           </div>
         </div>
@@ -182,18 +155,10 @@
           <p>Plant Partner is a responsive Python/Django app to help users keep track of when they last took care of their house plants.</p>
           <div class="project-links">
             <a href="https://plantpartner.fly.dev/" target="_blank">
-              <img 
-                class="website-icon"
-                src="./assets/icons/myicon.png" 
-                alt="a website icon"
-              >
+              <h4>Launch</h4>
             </a>
             <a href="https://github.com/strammel33/plant-partner" class="git-link" target="_blank">
-              <img 
-                class="website-icon"
-                src="./assets/icons/github.png" 
-                alt="the github logo"
-              >
+              <h4>GitHub</h4>
             </a>
           </div>
         </div>
