add resume link

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       <li><a href="#about">ABOUT</a></li>
       <li><a href="#projects">PROJECTS</a></li>
       <li><a href="#contact">CONTACT</a></li>
+      <li>
+        <a href="./assets/Suzanne Trammel Resume.pdf" target="blank">RESUME</a>
+      </li>
     </ul>
   </nav>
   <main>
